--- a/style.css
+++ b/style.css
@@ -548,7 +548,7 @@ ul.notes-list {
 .search .spinner {
   position: absolute;
   right: 10px;
-  top: 10px;
+  top: 6px;
 }
 
 .note-viewer {
@@ -589,7 +589,7 @@ ul.notes-list {
   margin-bottom: 10px;
   overflow: hidden;
   width: 100%;
-  height: 34px;
+  height: 36px;
 }
 .note-title {
   line-height: 1.3;
@@ -744,6 +744,7 @@ ul.notes-list {
 
 .text-with-markdown p {
   margin-bottom: 16px;
+  white-space: break-spaces;
 }
 .text-with-markdown img {
   width: 100%;
@@ -802,6 +803,14 @@ ul.notes-list {
   padding: 0;
   width: 1px;
   position: absolute;
+}
+
+.link--unstyled,
+.link--unstyled:active,
+.link--unstyled:visited,
+.link--unstyled:focus {
+  text-decoration: none;
+  color: unset;
 }
 
 @media screen and (max-width: 900px) {
